--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
-hi
-there
+<body>
+
+<h2>Spectacular Mountain</h2>
+<img src="pic_mountain.jpg" alt="Mountain View" style="width:304px;height:228px;">
+
+</body>
 <style>
 body {
     background-color: green
