--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <body>
 
-<h2>Spectacular Mountain</h2>
-<img src="pic_mountain.jpg" alt="Mountain View" style="width:304px;height:228px;">
+<h2></h2>
+<img src="" alt="=" style="width:304px;height:228px;">
 
 </body>
 <style>
