--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <body>
 
 <h2></h2>
-<img src="1purple_cow.gif" alt="=" style="width:304px;height:228px;">
+<img src="1purple_cow.gif" alt="Really Fat Purple Cow" style="width:304px;height:228px;">
 
 </body>
 <style>
